# example

./: README.md
NewPrjTemplate/: CMakeLists.txt  conanfile.py  vs.bat
NewPrjTemplate/src/: stdafx.h
NewPrjTemplate_conan1/: conanfile.py  vs.bat
NewPrjTemplate_conan1/src/: main.cpp
NewPrjTemplate_conan2/: CMakeLists.txt  conanfile.py  vs.bat
typescript_demo/angular-demo/: .angular-cli.json  README.md  README2.md  package.json
typescript_demo/angular-demo/e2e/: app.e2e-spec.ts
typescript_demo/angular-demo/src/: index.html
typescript_demo/angular-demo/src/app/: app.component.ts
typescript_demo/demo1/: README.md  bs-config.json  tsconfig.json
typescript_demo/demo2/: index.html  package.json  readme.md
typescript_demo/demo2/src/: main.ts
typescript_demo/demo3/: README.md  bs-config.json  package.json  tsconfig.json
typescript_demo/demo3/src/: main.ts
typescript_demo/jquery_demo/: README.md  bs-config.json  package.json  tsconfig.json
typescript_demo/jquery_demo/src/: PageX.ts  main.ts  xLib.ts
typescript_demo/tasks/: bs-config.json  tsconfig.json
typescript_demo/tasks/src/: BasePage.ts  main.ts
wechat_programe/demo1/: app.json  project.config.json
